* Makefile.in (md5.o): Depend on config.h.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36029 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/Makefile.in
+++ b/libiberty/Makefile.in
@@ -276,6 +276,7 @@ getruntime.o: config.h $(INCDIR)/libiberty.h
 hex.o: $(INCDIR)/libiberty.h
 floatformat.o: $(INCDIR)/floatformat.h
 mkstemps.o: config.h
+md5.o: config.h
 objalloc.o: config.h $(INCDIR)/objalloc.h
 obstack.o: config.h $(INCDIR)/obstack.h
 partition.o: config.h $(INCDIR)/partition.h
