* c-decl.c (define_label): Call warning_with_file_and_line and 	error_with_file_and_line instead of plain warning or error.
	* c-parse.in (label): Use save_filename/save_lineno to ensure
	correct values for calls to define_label.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36040 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c-parse.in
+++ b/gcc/c-parse.in
@@ -1951,14 +1951,14 @@ label:	  CASE expr_no_commas ':'
 		  genrtl_case_label(CASE_LOW(case_label_tree), CASE_HIGH(case_label_tree));
 		  position_after_white_space ();
 		}
-	| identifier ':' maybe_attribute
-		{ tree label = define_label (input_filename, lineno, $1);
+	| identifier ':' save_filename save_lineno maybe_attribute
+		{ tree label = define_label ($3, $4, $1);
 		  stmt_count++;
 		  emit_nop ();
 		  if (label)
 		    {
 		      expand_label (label);
-		      decl_attributes (label, $3, NULL_TREE);
+		      decl_attributes (label, $5, NULL_TREE);
 		    }
 		  position_after_white_space (); }
 	;
