* Makefile.in: Rebuilt. 	* Makefile.am (AM_CXXFLAGS): Added -fdollars-in-identifiers.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36069 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -84,6 +84,8 @@ WARNINGS = -W -Wall
 ## currently broken with respect to exception handling in leaf
 ## functions.
 AM_CXXFLAGS = -fno-rtti -fvtable-thunks -fasynchronous-exceptions \
+## Some systems don't allow `$' in identifiers by default, so we force it.
+	-fdollars-in-identifiers \
 	@LIBGCJ_CXXFLAGS@ @EXCEPTIONSPEC@ $(WARNINGS) -D_GNU_SOURCE
 if USING_GCC
 AM_CFLAGS = @LIBGCJ_CFLAGS@ $(WARNINGS)
