--- a/gcc/java/Make-lang.in
+++ b/gcc/java/Make-lang.in
@@ -77,9 +77,6 @@ JAVA_SRCS = $(srcdir)/java/parse.y $(srcdir)/java/class.c \
   $(srcdir)/java/check-init.c $(srcdir)/java/lex.c $(srcdir)/java/boehm.c \
   $(srcdir)/java/jcf-depend.c  $(srcdir)/java/jcf-path.c
 
-jc1$(exeext): $(P) $(JAVA_SRCS) $(LIBDEPS) $(BACKEND) ggc-callbacks.o
-	cd java; $(MAKE) $(LANG_FLAGS_TO_PASS) $(JAVA_FLAGS_TO_PASS) ../jc1$(exeext)
-
 jvspec.o: $(srcdir)/java/jvspec.c system.h $(GCC_H)
 	$(CC) -c $(ALL_CFLAGS) $(ALL_CPPFLAGS) \
 		$(INCLUDES) $(srcdir)/java/jvspec.c
@@ -106,9 +103,6 @@ GCJH_SOURCES = $(srcdir)/java/gjavah.c $(srcdir)/java/jcf-io.c \
 	$(srcdir)/java/jcf.h $(srcdir)/java/javaop.h \
 	$(srcdir)/java/javaop.def $(srcdir)/java/jcf-depend.c \
 	$(srcdir)/java/jcf-path.c
-
-gcjh$(exeext): $(GCJH_SOURCES) $(LIBDEPS) $(TREE_H)
-	cd java && $(MAKE) $(LANG_FLAGS_TO_PASS) $(JAVA_FLAGS_TO_PASS) ../gcjh$(exeext)
 
 $(INTL_TARGETS): $(srcdir)/java/parse.c $(srcdir)/java/parse-scan.c
 
@@ -138,16 +132,22 @@ $(PARSE_SCAN_C):  $(srcdir)/java/parse-scan.y
 JV_SCAN_SOURCES = $(srcdir)/java/parse-scan.y $(srcdir)/java/lex.c \
        $(srcdir)/java/parse.h $(srcdir)/java/lex.h $(srcdir)/java/jv-scan.c
 
-jv-scan$(exeext): $(JV_SCAN_SOURCES) $(BACKEND) $(LIBDEPS)
-	cd java && $(MAKE) $(LANG_FLAGS_TO_PASS) $(JAVA_FLAGS_TO_PASS) ../jv-scan$(exeext)
-
 # This must be kept in sync with dependencies in Makefile.in.
 JCF_DUMP_SOURCES = $(srcdir)/java/jcf-dump.c $(srcdir)/java/jcf-io.c \
        $(srcdir)/java/zextract.c $(TREE_H)
 
-jcf-dump$(exeext): $(JCF_DUMP_SOURCES)
-	cd java && $(MAKE) $(LANG_FLAGS_TO_PASS) $(JAVA_FLAGS_TO_PASS) ../jcf-dump$(exeext)
+jc1$(exeext) gcjh$(exeext) jv-scan$(exeext) jcf-dump$(exeext): s-java
 
+s-java: $(P) $(JAVA_SRCS) $(LIBDEPS) $(BACKEND) ggc-callbacks.o \
+	$(GCJH_SOURCES) $(LIBDEPS) $(TREE_H) \
+	$(JV_SCAN_SOURCES) $(BACKEND) $(LIBDEPS) \
+	$(JCF_DUMP_SOURCES)
+	cd java; $(MAKE) $(LANG_FLAGS_TO_PASS) $(JAVA_FLAGS_TO_PASS) \
+	../jc1$(exeext) \
+	../gcjh$(exeext) \
+	../jv-scan$(exeext) \
+	../jcf-dump$(exeext)
+	touch s-java
 #
 # Build hooks:
 
@@ -200,7 +200,7 @@ java.install-info:
 
 java.mostlyclean:
 	-rm -f java/*$(objext) $(DEMANGLER_PROG)
-	-rm -f jc1$(exeext) $(GCJ)$(exeext) jvgenmain$(exeext) gcjh$(exeext) jv-scan$(exeext) jcf-dump$(exeext)
+	-rm -f jc1$(exeext) $(GCJ)$(exeext) jvgenmain$(exeext) gcjh$(exeext) jv-scan$(exeext) jcf-dump$(exeext) s-java
 java.clean:
 java.distclean:
 	-rm -f java/config.status java/Makefile
