--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -3344,11 +3344,12 @@ changequote([,])dnl
 		use_collect2=yes
 		;;
 	sh-*-elf*)
+		tmake_file="sh/t-sh sh/t-elf"
 		tm_file="sh/sh.h sh/elf.h"
 		float_format=sh
 		;;
 	sh-*-rtemself*)
-		tmake_file="sh/t-sh t-rtems"
+		tmake_file="sh/t-sh sh/t-elf t-rtems"
 		tm_file="sh/sh.h sh/elf.h sh/rtemself.h"
 		float_format=sh
 		;;
