* Makefile.in (CXX_TREE_H): Add dependency on HTAB_H. 	(pt.o): Remove dependency on HTAB_H. 	* cp-tree.h: Include hashtab.h. 	(walk_tree): Change prototype. 	(walk_tree_without_duplicates): New function. 	* decl.c (check_default_argument): Use it. 	* optimize.c (remap_decl): Adjust calls to walk_tree. 	(copy_body): Likewise. 	(expand_calls_inline): Likewise. 	(calls_setjmp_p): Use walk_tree_without_duplicates. 	* pt.c: Don't include hashtab.h. 	(for_each_template_parm): Use walk_tree_without_duplicates. 	* semantics.c (finish-stmt_tree): Likewise. 	(expand_body): Likewise. 	* tree.c (walk_tree): Add additional parameter. 	(walk_tree_without_duplicates): New function. 	(count_trees): Use it. 	(verify_stmt_tree): Adjust call to walk_tree. 	(find_tree): Use walk_tree_without_duplicates. 	(no_linkage_check): Likewise. 	(break_out_target_exprs): Adjust call to walk_tree. 	(cp_unsave): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36155 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/Makefile.in
+++ b/gcc/cp/Makefile.in
@@ -208,7 +208,7 @@ TREE_H = $(srcdir)/../tree.h $(srcdir)/../real.h $(srcdir)/../tree.def \
 CXX_TREE_H = $(TREE_H) cp-tree.h $(srcdir)/../c-common.h cp-tree.def \
 	$(srcdir)/../c-common.def $(srcdir)/../function.h $(srcdir)/../varray.h \
 	$(srcdir)/../../include/splay-tree.h \
-	$(srcdir)/../system.h $(CONFIG_H)
+	$(srcdir)/../system.h $(CONFIG_H) $(HTAB_H)
 PARSE_H = $(srcdir)/parse.h
 PARSE_C = $(srcdir)/parse.c
 EXPR_H = $(srcdir)/../expr.h ../insn-codes.h
@@ -299,7 +299,7 @@ xref.o : xref.c $(CXX_TREE_H) $(srcdir)/../input.h \
   $(srcdir)/../toplev.h
 pt.o : pt.c $(CXX_TREE_H) decl.h $(PARSE_H) lex.h \
   $(srcdir)/../toplev.h $(GGC_H) $(RTL_H) \
-  $(srcdir)/../except.h $(HTAB_H)
+  $(srcdir)/../except.h
 error.o : error.c $(CXX_TREE_H) \
   $(srcdir)/../toplev.h $(srcdir)/../diagnostic.h
 errfn.o : errfn.c $(CXX_TREE_H) \
