2000-09-06  Manfred Hollstein  <manfredh@redhat.com>
	* Makefile.in (bootstrap-lean): Depend on bootstrap-lean_g,
	not bootstrap-lean_f.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36201 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -2830,7 +2830,7 @@ bootstrap-lean_d:  bootstrap-lean_c stage_c
 bootstrap-lean_e:  bootstrap-lean_d stage_d
 bootstrap-lean_f:  bootstrap-lean_e clean_s2
 bootstrap-lean_g:  bootstrap-lean_f stage_e
-bootstrap-lean: force bootstrap-lean_f
+bootstrap-lean: force bootstrap-lean_g
 
 bootstrap2_c:               stage_c
 bootstrap2_d:  bootstrap2_c stage_d
